--- a/translation/it/soma/sutta/sn/sn56/sn56.11_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn56/sn56.11_translation-it-soma.json
@@ -6,7 +6,7 @@
   "sn56.11:2.4": "Evitando questi due estremi, la via di mezzo a cui il Buddha si è risvegliato conduce alla visione, alla conoscenza, alla pace suprema, alla completa conoscenza, all’illuminazione, al Nibbāna. ",
   "sn56.11:3.1": "E qual è questa via di mezzo? ",
   "sn56.11:4.1": "Questa è la verità dei Nobili sulla sofferenza ",
-  "sn56.11:4.2": "la nascita è sofferenza, la vecchiaia è dukkha, la morte è dukkha, entrare in contatto con ciò che è spiacevole è dukkha, essere separati da quel che ci è caro è dukkha, non ottenere quello che si vuole è dukkha — le cinque cataste ardenti sono dukkha. ",
+  "sn56.11:4.2": "la nascita è sofferenza, la vecchiaia è , la morte è dukkha, entrare in contatto con ciò che è spiacevole è dukkha, essere separati da quel che ci è caro è dukkha, non ottenere quello che si vuole è dukkha — le cinque cataste ardenti sono dukkha. ",
   "sn56.11:4.3": "Questa è la verità dei nobili sull’origine della sofferenza ",
   "sn56.11:4.4": "Quella sete che porta a continua esistenza, si accompagna a diletto e passione, deliziandosi qui e là, ovvero: ",
   "sn56.11:4.5": "Sete di piacere dei sensi, sete di esistere, sete di non esistere. ",
