--- a/translation/it/soma/sutta/kn/iti/vagga11/iti102_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti102_translation-it-soma.json
@@ -1,7 +1,7 @@
 {
   "iti102:2.1": "Io dico che la distruzione degli impulsi è per uno che conosce e vede, non per uno che non conosce e non vede. ",
   "iti102:2.2": "E come la distruzione...? ",
-  "iti102:2.3": "Qui c’è la distruzione degli impulsi per uno che conosce e vede il sofferenza, la causa del dukkha, la fine del dukkha, e il sentiero che conduce alla fine del dukkha. ",
+  "iti102:2.3": "Qui c’è la distruzione degli impulsi per uno che conosce e vede il sofferenza, la causa del , la fine del dukkha, e il sentiero che conduce alla fine del dukkha. ",
   "iti102:3.1": "Al praticante che si allena * ",
   "iti102:3.2": "* ",
   "iti102:3.3": "* ",
