--- a/translation/it/soma/sutta/sn/sn12/sn12.2_translation-it-soma.json
+++ b/translation/it/soma/sutta/sn/sn12/sn12.2_translation-it-soma.json
@@ -62,6 +62,6 @@
   "sn12.2:13.2": "Ci sono tre (tipi di) attività karmiche/scelte/azioni [creazioni/fabbricazioni]: ",
   "sn12.2:13.3": "attività karmiche/scelte/azioni corporali/fisiche, verbali, mentali. ",
   "sn12.2:14.1": "E che cos’è l’ignoranza? ",
-  "sn12.2:14.2": "Non conoscenza del sofferenza, della causa del dukkha, della fine del dukkha, e del sentiero che conduce alla fine del dukkha. ",
+  "sn12.2:14.2": "Non conoscenza del sofferenza, della causa del , della fine del dukkha, e del sentiero che conduce alla fine del dukkha. ",
   "sn12.2:15.4": "Con il completo dissiparsi e cessazione dell’ignoranza sorgono attività karmiche/scelte "
 }
