--- a/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga11/iti109_translation-it-soma.json
@@ -14,7 +14,7 @@
   "iti109:9.1": "‘Controcorrente’ è sinonimo di rinuncia. ",
   "iti109:10.1": "‘con mani e piedi farebbe uno sforzo’ è sinonimo di sforzarsi (arouse energy). ",
   "iti109:11.1": "‘una persona in piedi sulla riva, dotata di vista’ è sinonimo del Tathāgata, dell’Arahant, del Buddha perfettamente risvegliato. ",
-  "iti109:12.1": "Con il sofferenza lascerebbe andare anche i piaceri sensuali, ",
+  "iti109:12.1": "Con la sofferenza lascerebbe andare anche i piaceri sensuali, ",
   "iti109:12.2": "desiderando di arrivare alla liberazione da ogni giogo. ",
   "iti109:12.3": "Conoscendo perfettamente con il cuore ben liberato, ",
   "iti109:12.4": "verrebbe toccato dalla liberazione qui e adesso ",
