--- a/translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json
@@ -1,5 +1,6 @@
 {
   "iti63:2.1": "Cercatori, ci sono tre tempi. ",
+  "iti63:2.2": "Quali tre? ",
   "iti63:2.3": "Il tempo passato, il tempo futuro, il tempo presente. ",
   "iti63:3.1": "Le creature che sono coscienti di ciò che viene detto, ",
   "iti63:3.2": "radicate in ciò che viene detto ",
