--- a/translation/it/soma/sutta/kn/iti/vagga7/iti69_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti69_translation-it-soma.json
@@ -4,7 +4,7 @@
   "iti69:2.3": "Mentre vi dico che chi le ha rimosse ",
   "iti69:2.4": "ha attraversato l’oceano con le sue onde, correnti, mulinelli, mostri e demoni marini. È andato oltre, ha raggiunto l’altra sponda, è un brahmano in piedi sulla terra asciutta.” ",
   "iti69:3.1": "Chi ha dissipato passione, odio ",
-  "iti69:3.2": "x ",
+  "iti69:3.2": "e ignoranza, ",
   "iti69:3.3": "È riuscito a superare la luna, l’oceano, i mostri avvinghianti, ",
   "iti69:3.4": "il pericolo delle onde, difficile da superare. ",
   "iti69:4.1": "Ha superato gli attaccamenti, abbandonato la morte, è senza acquisizioni, ",
