--- a/translation/it/soma/sutta/kn/iti/vagga7/iti69_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti69_translation-it-soma.json
@@ -6,7 +6,7 @@
   "iti69:3.1": "Chi ha dissipato passione, odio ",
   "iti69:3.2": "e ignoranza, ",
   "iti69:3.3": "è riuscito ad attraversare questo oceano con i suoi mostri e demoni marini ",
-  "iti69:3.4": "il pericolo delle onde, difficile da superare. ",
+  "iti69:3.4": "e le sue onde pericolose, difficili da superare. ",
   "iti69:4.1": "Ha superato gli attaccamenti, abbandonato la morte, è senza acquisizioni, ",
   "iti69:4.2": "ha abbandonato la sofferenza che conduce a nuove esistenze. ",
   "iti69:4.3": "è scomparso, non viene più giudicato, ",
