--- a/translation/it/soma/sutta/kn/iti/vagga7/iti69_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti69_translation-it-soma.json
@@ -7,7 +7,7 @@
   "iti69:3.2": "e ignoranza, ",
   "iti69:3.3": "è riuscito ad attraversare questo oceano con i suoi mostri e demoni marini ",
   "iti69:3.4": "e le sue onde pericolose, difficili da superare. ",
-  "iti69:4.1": "Ha superato i vincoli, abbandonato la morte, è senza acquisizioni, ",
+  "iti69:4.1": "Ha superato ogni costrizione, abbandonato la morte, è senza acquisizioni, ",
   "iti69:4.2": "ha abbandonato la sofferenza che conduce a nuove esistenze. ",
   "iti69:4.3": "è scomparso, non viene più giudicato, ",
   "iti69:4.4": "ha confuso il Re della Morte, vi dico. "
