--- a/translation/it/soma/sutta/kn/iti/vagga7/iti69_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti69_translation-it-soma.json
@@ -1,5 +1,5 @@
 {
-  "iti69:2.1": "“Cercatori, vi dico che chiunque, che sia un cercatore o una cercatrice, se non ha ancora abbandonato passione, odio, e illusione, ",
+  "iti69:2.1": "“Cercatori, vi dico che chiunque, cercatore o cercatrice che sia, se non ha ancora abbandonato passione, odio, e illusione, ",
   "iti69:2.2": "non ha ancora attraversato l’oceano con le sue onde, correnti, mulinelli, pieno di mostri e demoni marini. ",
   "iti69:2.3": "Mentre vi dico che chi le ha rimosse ",
   "iti69:2.4": "ha attraversato l’oceano con le sue onde, correnti, mulinelli, mostri e demoni marini. È andato oltre, ha raggiunto l’altra sponda, è un brahmano in piedi sulla terra asciutta.” ",
