--- a/translation/it/soma/sutta/kn/iti/vagga6/iti56_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga6/iti56_translation-it-soma.json
@@ -1,5 +1,5 @@
 {
-  "iti56:2.1": "Cercatori, ci sono tre impulsi (pulsioni /influenze/ perdite) ",
+  "iti56:2.1": "Cercatori, ci sono tre compulsioni (pulsioni /influenze/ perdite) ",
   "iti56:2.3": "L’impulso dei piaceri sensuali, l’impulso dell’esistenza e l’impulso dell’ignoranza. ",
   "iti56:3.1": "",
   "iti56:3.2": "",
