--- a/translation/it/soma/sutta/kn/iti/vagga6/iti56_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga6/iti56_translation-it-soma.json
@@ -3,7 +3,7 @@
   "iti56:2.3": "La compulsione dei piaceri sensuali, la compulsione dell’esistenza e la compulsione dell’ignoranza. ",
   "iti56:3.1": "",
   "iti56:3.2": "",
-  "iti56:3.3": "conosce questi impulsi ",
+  "iti56:3.3": "conosce queste compulsioni ",
   "iti56:3.4": "",
   "iti56:4.1": "",
   "iti56:4.2": "",
