--- a/translation/it/soma/sutta/kn/iti/vagga6/iti57_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga6/iti57_translation-it-soma.json
@@ -2,7 +2,7 @@
   "iti57:2.1": "Cercatori, ci sono tre compulsioni (pulsioni /influenze/ perdite) ",
   "iti57:2.2": "Quali tre? ",
   "iti57:2.3": "La compulsione dei piaceri sensuali, la compulsione dell’esistenza e la compulsione dell’ignoranza. ",
-  "iti57:3.1": "Quando si distrugge l’impulso dei piaceri sensuali, ",
+  "iti57:3.1": "Quando si distrugge la compulsione dei piaceri sensuali, ",
   "iti57:3.2": "l’ignoranza perde il suo colore (viene rimossa) ",
   "iti57:3.3": "e l’impulso dell’esistenza si esaurisce, ",
   "iti57:3.4": "uno è libero, senza acquisizioni, ",
