--- a/translation/it/soma/sutta/kn/iti/vagga10/iti96_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga10/iti96_translation-it-soma.json
@@ -1,7 +1,7 @@
 {
   "iti96:2.1": "Cercatori, uno sotto il giogo del piacere e dell’esistenza è detto uno che ritorna, perché ritorna a questo stato. ",
   "iti96:2.2": "Uno che non è sotto il giogo del piacere, ma è sotto il giogo dell’esistenza, è detto uno che non ritorna, perché non torna a questo stato. ",
-  "iti96:2.3": "Uno che non è sotto né il giogo del piacere, né quello dell’esistenza, è detto un Arahant, uno che ha distrutto* ogni impulso.* ",
+  "iti96:2.3": "Uno che non è sotto né il giogo del piacere, né quello dell’esistenza, è detto un Arahant, uno che ha distrutto* ogni compulsione.* ",
   "iti96:3.1": "Sotto il giogo sia del piacere, ",
   "iti96:3.2": "che dell’esistenza, ",
   "iti96:3.3": "le creature girovagano per il Saṁsāra ",
