--- a/translation/it/soma/sutta/kn/iti/vagga6/iti57_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga6/iti57_translation-it-soma.json
@@ -6,6 +6,6 @@
   "iti57:3.2": "si dissipa l’ignoranza [ l’ignoranza perde il suo colore (viene rimossa)] ",
   "iti57:3.3": "e la compulsione dell’esistenza si esaurisce, ",
   "iti57:3.4": "uno è libero, senza base per la rinascita (senza acquisizioni). ",
-  "iti57:3.5": "indossa il suo ultimo corpo, ",
+  "iti57:3.5": "Indossa il suo ultimo corpo, ",
   "iti57:3.6": "dopo aver sconfitto Māra e il suo esercito.” "
 }
