--- a/translation/it/soma/sutta/kn/iti/vagga6/iti58_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga6/iti58_translation-it-soma.json
@@ -1,5 +1,6 @@
 {
   "iti58:2.1": "Cercatori, ci sono questi tre tipi di sete. ",
+  "iti58:2.2": "Quali tre? ",
   "iti58:2.3": "La sete dei piaceri sensuali, la sete per l’esistenza e la sete per la non esistenza. ",
   "iti58:3.1": "Soggiogata dalle catene della sete, ",
   "iti58:3.2": "con il cuore pieno di desiderio per un tipo di esistenza o l’altra (per l’esistenza o la non esistenza), ",
