--- a/translation/it/soma/sutta/kn/iti/vagga6/iti58_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga6/iti58_translation-it-soma.json
@@ -9,7 +9,7 @@
   "iti58:3.5": "Le creature girovagano per il Saṁsāra ",
   "iti58:3.6": "dirette verso nascita e morte. ",
   "iti58:4.1": "Chi annienta la sete, ",
-  "iti58:4.2": "senza più sete per un tipo di esistenza o l'altra (per l’esistenza o la non esistenza), ",
+  "iti58:4.2": "senza più sete per qualsiasi tipo di esistenza [un tipo di esistenza o l'altra (per l’esistenza o la non esistenza),] ",
   "iti58:4.3": "ha davvero raggiunto l’altra sponda in questo mondo ",
   "iti58:4.4": "e ottenuto la distruzione degli impulsi. "
 }
