--- a/translation/it/soma/sutta/kn/iti/vagga6/iti58_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga6/iti58_translation-it-soma.json
@@ -4,7 +4,7 @@
   "iti58:2.3": "La sete dei piaceri sensuali, la sete per l’esistenza e la sete per la non esistenza. ",
   "iti58:3.1": "Soggiogata dalle catene della sete, ",
   "iti58:3.2": "con il cuore pieno di desiderio per qualsiasi tipo di esistenza [un tipo di esistenza o l’altra (per l’esistenza o la non esistenza),] ",
-  "iti58:3.3": "quella è la gente sotto il controllo di Māra, ",
+  "iti58:3.3": "quella è la gente sotto il giogo di Māra, ",
   "iti58:3.4": "che ancor non è affrancata da quel giogo. ",
   "iti58:3.5": "Le creature girovagano per il Saṁsāra ",
   "iti58:3.6": "dirette verso nascita e morte. ",
