--- a/translation/it/soma/sutta/kn/iti/vagga6/iti58_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga6/iti58_translation-it-soma.json
@@ -10,6 +10,6 @@
   "iti58:3.6": "dirette verso nascita e morte. ",
   "iti58:4.1": "Coloro che annientano la sete, ",
   "iti58:4.2": "senza più sete per qualsiasi tipo di esistenza [un tipo di esistenza o l'altra (per l’esistenza o la non esistenza),], ",
-  "iti58:4.3": "nel mondo ha davvero raggiunto l’altra sponda ",
+  "iti58:4.3": "davvero loro nel mondo hanno raggiunto l’altra sponda ",
   "iti58:4.4": "e ottenuto la distruzione delle compulsioni. "
 }
