--- a/translation/it/soma/sutta/kn/iti/vagga6/iti59_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga6/iti59_translation-it-soma.json
@@ -4,6 +4,6 @@
   "iti59:2.3": "Virtù, Samādhi e saggezza di uno che ha portato a compimento l’addestramento. ",
   "iti59:3.1": "Virtù, Samādhi e saggezza: ",
   "iti59:3.2": "chiunque abbia ben coltivato queste qualità, ",
-  "iti59:3.3": "questi va oltre il dominio di Māra ",
+  "iti59:3.3": "costui va oltre il dominio di Māra ",
   "iti59:3.4": "e risplende come il sole.” "
 }
