--- a/translation/it/soma/sutta/kn/iti/vagga7/iti61_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti61_translation-it-soma.json
@@ -9,7 +9,7 @@
   "iti61:4.1": "Il sorgere dell’occhio fisico ",
   "iti61:4.2": "apre la strada all’occhio divino. ",
   "iti61:4.3": "Quando c’è la conoscenza ",
-  "iti61:4.4": "e il supremo occhio della saggezza. ",
+  "iti61:4.4": "sorge il supremo occhio della saggezza. ",
   "iti61:4.5": "Una volta raggiunto quell’occhio ",
   "iti61:4.6": "si è liberi da ogni sofferenza. "
 }
