--- a/translation/it/soma/sutta/kn/iti/vagga8/iti70_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti70_translation-it-soma.json
@@ -2,7 +2,7 @@
   "iti70:2.1": "Cercatori, ho visto come le creature dotate di condotta* inappropriata* corporale*, verbale*, mentale*, trovano pecche negli arahant, hanno una cattiva visione delle cose e compiono azioni in base a questa cattiva visione delle cose. ",
   "iti70:2.2": "Dopo la morte, quando il corpo perisce, rinascono in uno stato di perdizione*, di sventura*, di dannazione*, all’inferno. ",
   "iti70:3.1": "Cercatori, io non vi dico questo perché l’ho sentito da altri asceti o brahmani. ",
-  "iti70:3.2": "x ",
+  "iti70:3.2": "",
   "iti70:3.3": "\n",
   "iti70:3.4": "tutto quello che vi dico l’ho conosciuto, visto, e compreso di persona. ",
   "iti70:4.1": "x ",
