--- a/translation/it/soma/sutta/kn/iti/vagga8/iti70_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti70_translation-it-soma.json
@@ -4,7 +4,7 @@
   "iti70:3.1": "Cercatori, io non vi dico questo perché l’ho sentito da altri asceti o brahmani. ",
   "iti70:3.2": "",
   "iti70:3.3": "",
-  "iti70:3.4": "tutto quello che vi dico l’ho conosciuto, visto, e compreso di persona. ",
+  "iti70:3.4": "Ma tutto quello che vi dico l’ho conosciuto, visto e compreso di persona. ",
   "iti70:4.1": "x ",
   "iti70:4.2": "\n",
   "iti70:5.1": "Dirigendo la mente verso il falso/sbagliato, ",
