--- a/translation/it/soma/sutta/kn/iti/vagga8/iti70_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga8/iti70_translation-it-soma.json
@@ -5,7 +5,7 @@
   "iti70:3.2": "",
   "iti70:3.3": "",
   "iti70:3.4": "Ma tutto quello che vi dico l’ho conosciuto, visto e compreso di persona. ",
-  "iti70:4.1": "x ",
+  "iti70:4.1": "",
   "iti70:4.2": "\n",
   "iti70:5.1": "Dirigendo la mente verso il falso/sbagliato, ",
   "iti70:5.2": "dicendo parole false/sbagliate ",
