--- a/translation/it/giovannizappa/sutta/mn/mn99_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn99_translation-it-giovannizappa.json
@@ -67,7 +67,7 @@
   "mn99:9.17": "“No, Signor Gotama” ",
   "mn99:9.18": "“Quindi, studente, sembra che non ci sia nemmeno un singolo bramino, ",
   "mn99:9.20": "nemmeno uno fino alla settima generazione di maestri, ",
-  "mn99:9.22": "nemmeno gli antichi veggenti dei bramini ",
+  "mn99:9.22": "nemmeno gli antichi veggenti dei bramini, ",
   "mn99:9.23": "che dice: ",
   "mn99:9.24": "‘Dichiariamo il risultato di queste cinque cose dopo averle realizzate attraverso conoscenza diretta’?” ",
   "mn99:9.25": "Immagina una coda di uomini ciechi, ognuno attaccato a quello davanti: il primo non vede, quello in mezzo non vede, e l’ultimo non vede. ",
