--- a/translation/it/giovannizappa/sutta/mn/mn99_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn99_translation-it-giovannizappa.json
@@ -73,7 +73,7 @@
   "mn99:9.25": "Immagina una coda di uomini ciechi, ognuno attaccato a quello davanti: il primo non vede, quello in mezzo non vede, e l’ultimo non vede. ",
   "mn99:9.26": "Allo stesso modo, a me sembra che la dichiarazione dei bramini si rivela essere come una fila di uomini ciechi: il primo non vede, quello in mezzo non vede, e l’ultimo non vede”. ",
   "mn99:10.1": "Quando il Buddha disse così, Subha si infastidì e si arrabbiò con lui a causa della similitudine della fila di uomini ciechi. Attaccò e insultò persino il Buddha stesso, dicendo: ",
-  "mn99:10.2": "‘‘Che l’asceta Gotama sia maledetto!”. Disse al Buddha: ",
+  "mn99:10.2": "‘‘Che l’asceta Gotama sia maledetto!” Disse al Buddha: ",
   "mn99:10.3": "“Signor Gotama, il bramino Pokkharasāti Upamañña della Foresta Subhaga dice: ",
   "mn99:10.4": "‘Questo è esattamente quello che accade ad alcuni asceti e bramini. Dicono di possedere distinzioni sovrumane in conoscenza e visione degne dei nobili. ",
   "mn99:10.5": "Ma la loro dichiarazione si rivela essere uno scherzo, solo parole, vuote e vacue. ",
