--- a/translation/it/giovannizappa/sutta/mn/mn99_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn99_translation-it-giovannizappa.json
@@ -187,7 +187,7 @@
   "mn99:21.2": "sviluppare una mente libera da inimicizia e cattiveria. ",
   "mn99:21.3": "Prendi un monaco che dice la verità. ",
   "mn99:21.4": "Pensando: ‘Io dico la verità’, trova ispirazione nel significato e nell’insegnamento, e trae gioia dall’insegnamento. ",
-  "mn99:21.5": "E io dico che trovare piacere nell’insegnamento sia un prerequisito della mente per ",
+  "mn99:21.5": "E io dico che trarre gioia dall’insegnamento sia un prerequisito della mente per ",
   "mn99:21.6": "sviluppare una mente libera da inimicizia e cattiveria. ",
   "mn99:21.7": "Prendi un monaco che ha fervore … ",
   "mn99:21.8": "che è casto … ",
