--- a/translation/it/giovannizappa/sutta/mn/mn100_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn100_translation-it-giovannizappa.json
@@ -13,7 +13,7 @@
   "mn100:3.3": "le disse: ",
   "mn100:3.4": "“La bramina è una disgrazia! Seppur ci siano bramini competenti nelle tre Veda, lei loda quel pelato, quel finto asceta” ",
   "mn100:3.5": "“Ma, caro ragazzo, tu non capisci l’etica e la saggezza del Buddha. ",
-  "mn100:3.6": "Altrimenti non penseresti mai di abusarlo o di insultarlo” ",
+  "mn100:3.6": "Altrimenti non penseresti mai di offenderlo o di insultarlo” ",
   "mn100:3.7": "“Beh, allora, signora, fammi sapere quando il Buddha arriva a Caṇḍalakappa” ",
   "mn100:3.8": "“Lo farò, caro”, lei rispose. ",
   "mn100:4.1": "Poi il Buddha, passo dopo passo nella terra dei Kosala, giunse a Caṇḍalakappa, ",
