--- a/translation/it/giovannizappa/sutta/mn/mn100_translation-it-giovannizappa.json
+++ b/translation/it/giovannizappa/sutta/mn/mn100_translation-it-giovannizappa.json
@@ -18,7 +18,7 @@
   "mn100:3.8": "“Lo farò, caro”, lei rispose. ",
   "mn100:4.1": "Poi il Buddha, passo dopo passo nella terra dei Kosala, giunse a Caṇḍalakappa, ",
   "mn100:4.2": "dove si fermò nel bosco di mango dei bramini Todeyya. ",
-  "mn100:5.1": "Dhanañjānī sentì che era arrivato. ",
+  "mn100:5.1": "Dhanañjānī sentì che il Buddha era arrivato. ",
   "mn100:5.2": "Allora andò da Saṅgārava e lo avvisò, aggiungendo: ",
   "mn100:5.4": "“Prego, caro ragazzo, vai pure quando vuoi” ",
   "mn100:5.5": "“Sì, signora”, rispose Saṅgārava. Andò dal Buddha e ci scambiò saluti. ",
