--- a/translation/de/sabbamitta/sutta/an/an5/an5.174_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.174_translation-de-sabbamitta.json
@@ -33,7 +33,7 @@
   "an5.174:11.3": "und nichts nimmt, was nicht gegeben, ",
   "an5.174:11.4": "wer nicht zur Frau eines anderen geht ",
   "an5.174:11.5": "und nicht schwelgt im Trinken ",
-  "an5.174:11.6": "von Wein und Likör: ",
+  "an5.174:11.6": "von Bier und Wein: ",
   "an5.174:12.1": "Sobald jemand diese fünf Bedrohungen aufgegeben hat, ",
   "an5.174:12.2": "gilt er als sittlich. ",
   "an5.174:12.3": "Wenn sein Körper auseinanderbricht, wird dieser Weise ",
