--- a/translation/de/sabbamitta/sutta/an/an3/an3.70_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an3/an3.70_translation-de-sabbamitta.json
@@ -204,7 +204,7 @@
   "an3.70:34.6": "Das habe ich gemeint, als ich sagte: ",
   "an3.70:34.7": "‚Menschliches Königtum ist im Vergleich zum Glück der Götter dürftig.‘ ",
   "an3.70:35.1": "Du solltest keine lebenden Geschöpfe töten oder stehlen, ",
-  "an3.70:35.2": "lügen oder Alkohol trinken. ",
+  "an3.70:35.2": "lügen oder Branntwein trinken. ",
   "an3.70:35.3": "Sei keusch, halte dich von Geschlechtsverkehr fern, ",
   "an3.70:35.4": "iss nicht nachts und zur falschen Zeit. ",
   "an3.70:36.1": "Trag keine Kränze, keinen Duft, ",
