--- a/translation/de/sabbamitta/sutta/an/an4/an4.235_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.235_translation-de-sabbamitta.json
@@ -9,7 +9,7 @@
   "an4.235:1.5": "dunkle und helle Taten mit dunklem und hellem Ergebnis ",
   "an4.235:1.6": "und weder dunkle noch helle Taten mit weder dunklem noch hellem Ergebnis, die zur Auflösung der Taten führen. ",
   "an4.235:1.7": "Und was sind dunkle Taten mit dunklem Ergebnis? ",
-  "an4.235:1.8": "Da tötet jemand lebende Geschöpfe, stiehlt, begeht sexuelle Verfehlungen, lügt und trinkt Alkohol, der nachlässig macht. ",
+  "an4.235:1.8": "Da tötet jemand lebende Geschöpfe, stiehlt, begeht sexuelle Verfehlungen, lügt und trinkt Bier, Wein und berauschenden Branntwein. ",
   "an4.235:1.9": "Das nennt man dunkle Taten mit dunklem Ergebnis. ",
   "an4.235:2.1": "Und was sind helle Taten mit hellem Ergebnis? ",
   "an4.235:2.2": "Da tötet jemand keine lebenden Geschöpfe, stiehlt nicht, begeht keine sexuellen Verfehlungen, lügt nicht und trinkt keinen Alkohol, der nachlässig macht. ",
