--- a/translation/de/sabbamitta/sutta/an/an4/an4.53_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an4/an4.53_translation-de-sabbamitta.json
@@ -19,7 +19,7 @@
   "an4.53:3.4": "So lebt ein Zombiemann mit einer Zombiefrau. ",
   "an4.53:4.1": "Und wie lebt ein Zombiemann mit einer Göttin? ",
   "an4.53:4.2": "Da tötet der Mann lebende Geschöpfe … ist unmoralisch, von schlechtem Charakter … ",
-  "an4.53:4.3": "Doch die Frau tötet keine lebenden Geschöpfe, stiehlt nicht, begeht keine sexuellen Verfehlungen, lügt nicht und trinkt keinen Alkohol, der nachlässig macht. Sie ist sittlich, von gutem Charakter, lebt zu Hause und hat den Fleck des Geizes entfernt und beschimpft und beleidigt keine Asketen oder Brahmanen. ",
+  "an4.53:4.3": "Doch die Frau tötet keine lebenden Geschöpfe, stiehlt nicht, begeht keine sexuellen Verfehlungen, lügt nicht und trinkt kein Bier, keinen Wein oder berauschenden Branntwein. Sie ist sittlich, von gutem Charakter, lebt zu Hause und hat den Fleck des Geizes entfernt und beschimpft und beleidigt keine Asketen oder Brahmanen. ",
   "an4.53:4.4": "So lebt ein Zombiemann mit einer Göttin. ",
   "an4.53:5.1": "Und wie lebt ein Gott mit einer Zombiefrau? ",
   "an4.53:5.2": "Da tötet der Mann keine lebenden Geschöpfe … ist sittlich, von gutem Charakter … ",
