--- a/translation/it/soma/sutta/kn/iti/vagga7/iti62_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti62_translation-it-soma.json
@@ -3,7 +3,7 @@
   "iti62:2.3": "La facoltà di sapere che si sta per raggiungere l’illuminazione, la facoltà dell’illuminazione e la facoltà di uno che è illuminato. ",
   "iti62:3.1": "Al praticante che si addestra ",
   "iti62:3.2": "seguendo la retta strada, ",
-  "iti62:3.3": "la prima conoscenza riguarda l’eliminazione, ",
+  "iti62:3.3": "la prima conoscenza riguarda l’eliminazione ",
   "iti62:3.4": "seguita immediatamente dall’illuminazione. ",
   "iti62:4.1": "Dalla libertà che sorge con l’illuminazione, ",
   "iti62:4.2": "a tale persona arriva questa conoscenza: ",
