--- a/translation/it/soma/sutta/kn/iti/vagga7/iti62_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti62_translation-it-soma.json
@@ -6,7 +6,7 @@
   "iti62:3.3": "la prima conoscenza riguarda l’eliminazione ",
   "iti62:3.4": "che è seguita immediatamente dall’illuminazione. ",
   "iti62:4.1": "Dalla libertà che sorge con l’illuminazione, // Poi, per chi è liberato attraverso questa illuminazione, arriva questa conoscenza: ",
-  "iti62:4.2": "a tale persona arriva questa conoscenza: ",
+  "iti62:4.2": "arriva questa conoscenza: ",
   "iti62:4.3": "‘la mia liberazione è inalterabile (incrollabile).’ ",
   "iti62:4.4": "Grazie all’eliminazione di ogni catena dell’esistenza, ",
   "iti62:5.1": "perfezionate le sue facoltà, ",
