--- a/translation/it/soma/sutta/kn/iti/vagga7/iti62_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti62_translation-it-soma.json
@@ -8,7 +8,7 @@
   "iti62:4.1": "Poi, per chi è liberato attraverso questa illuminazione, ",
   "iti62:4.2": "arriva questa conoscenza: ",
   "iti62:4.3": "‘la mia liberazione è inalterabile (irremovibile).’ ",
-  "iti62:4.4": "Grazie all’eliminazione di ogni catena dell’esistenza, ",
+  "iti62:4.4": "Grazie all’eliminazione delle catene all’esistenza, ",
   "iti62:5.1": "perfezionate le sue facoltà, ",
   "iti62:5.2": "placida e devota allo stato di pace/placidità, ",
   "iti62:5.3": "indossa il suo ultimo corpo, ",
