--- a/translation/de/sabbamitta/sutta/an/an5/an5.178_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.178_translation-de-sabbamitta.json
@@ -58,7 +58,7 @@
   "an5.178:5.6": "„Gut, Mönche und Nonnen! ",
   "an5.178:5.7": "Auch ich habe so etwas nie gesehen oder gehört. ",
   "an5.178:5.10": "Vielmehr werden die Könige über die schlechte Tat eines Menschen unterrichtet: ",
-  "an5.178:5.11": "‚Unter dem Einfluss von Alkohol, der nachlässig macht, hat dieser Mensch einen Mann oder eine Frau ermordet, ",
+  "an5.178:5.11": "‚Unter dem Einfluss von Bier, Wein und berauschendem Branntwein hat dieser Mensch einen Mann oder eine Frau ermordet, ",
   "an5.178:5.12": "etwas aus einem Dorf oder aus der Wildnis gestohlen, ",
   "an5.178:5.13": "hatte sexuelle Beziehungen mit Frauen oder unverheirateten Mädchen, die unter dem Schutz von jemand anderem standen, ",
   "an5.178:5.14": "oder er hat einen Hausbesitzer oder das Kind eines Hausbesitzers durch Lügen vernichtet.‘ ",
