--- a/translation/de/sabbamitta/sutta/an/an5/an5.286_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/an/an5/an5.286_translation-de-sabbamitta.json
@@ -4,7 +4,7 @@
   "an5.286:0.3": "Ein Mönch ",
   "an5.286:1.1": "„Mönche und Nonnen, ein Mönch, der fünf Eigenschaften besitzt, wird in die Hölle gestoßen. ",
   "an5.286:1.2": "Welche fünf? ",
-  "an5.286:1.3": "Er tötet lebende Geschöpfe, stiehlt, hat Geschlechtsverkehr, lügt und trinkt Alkohol, der nachlässig macht. ",
+  "an5.286:1.3": "Er tötet lebende Geschöpfe, stiehlt, hat Geschlechtsverkehr, lügt und trinkt Bier, Wein und berauschenden Branntwein. ",
   "an5.286:1.4": "Ein Mönch, der diese fünf Eigenschaften besitzt, wird in die Hölle gestoßen. ",
   "an5.286:2.1": "Ein Mönch, der fünf Eigenschaften besitzt, wird in den Himmel erhoben. ",
   "an5.286:2.2": "Welche fünf? ",
