--- a/translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json
+++ b/translation/it/soma/sutta/kn/iti/vagga7/iti63_translation-it-soma.json
@@ -3,7 +3,7 @@
   "iti63:2.2": "Quali tre? ",
   "iti63:2.3": "Il tempo passato, il tempo futuro, il tempo presente. ",
   "iti63:3.1": "Le creature che sono coscienti di ciò che viene detto, // Le creature che percepiscono ciò che viene detto ",
-  "iti63:3.2": "radicate in ciò che viene detto // sono radicate in ciò che viene detto ",
+  "iti63:3.2": "radicate in ciò che viene detto ",
   "iti63:3.3": "e non comprendendo ciò che viene detto, ",
   "iti63:3.4": "finiscono sotto il giogo della morte. ",
   "iti63:4.1": "Quando uno comprende ciò che viene detto, ",
